2006-01-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.lgl) : updated
	* interfaces/R/src/rinterface.c (R_igraph_layout_lgl) : updated

2006-01-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/components.R (decompose.graph) : added
	* interfaces/R/igraph/R/layout.R (layout.lgl) : added
	* interfaces/R/src/rinterface.c (R_igraph_decompose)
	(R_igraph_layout_lgl) : added

2006-01-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* R/attributes.R (get.vertex.attribute) : bug corrected

	* R/attributes.R (get.edge.attribute, set.edge.attribute) :
	updated to use edge sequences
	* src/rinterface.c (R_igraph_get_edge_attributes)
	(R_igraph_set_edge_attributes) : updated

	* R/iterators.R (as.igraph.es) : bug.corrected

	* src/rinterface.c (R_SEXP_to_igraph_attr) : added
	(R_igraph_subgraph, R_igraph_get_graph_attribute)
	(R_igraph_get_vertex_attribute, R_igraph_get_vertex_attributes)
	(R_igraph_list_graph_attributes, R_igraph_list_vertex_attributes)
	(R_igraph_get_edge_attribute, R_igraph_get_edge_attributes)
	(R_igraph_list_edge_attributes, R_igraph_write_graph_ncol)
	(R_igraph_write_graph_lgl) : updated to use R_SEXP_to_igraph_attr

	* src/rinterface.c (R_SEXP_to_igraph_es_copy) : typo corrected
	
2006-01-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* R/structure.generators.R (igraph.lattice) : make length + dim form
	work

2006-01-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* R/iterators.R (igraph.vs.reset, igraph.es.reset) : repaired

	* R/iterators.R (as.vector.igraphvsvector, as.vector.igraphesvector) :
	minus one bug corrected
	
	* R/attributes.R (get.edge.attribute, set.edge.attribute) :
	updated to use edge sequences

	* R/plot.R (plot.igraph) : return NULL invisibly

	* R/tkplot.R (tkplot.close, tkplot.off, tkplot.fit.to.screen)
	(tkplot.center, tkplot.reshape, tkplot.export.postscript)
	(tkplot.rotate) : return NULL invisibly